devtools: tracing: Add support for compressing the trace

Tracing can generate large output files (over 50M) especially if system
tracing is enabled, and are very compressible. Add an option to compress
them using the same machinery that chrome://tracing uses.

This also uses less /tmp space to store the stream. Storing large files
in /tmp was causing problems for chromecast, as space is /tmp is very
limited.

BUG=791708

Change-Id: Icbaac91cccb825a305431569bf6f42011d3cfbea
Reviewed-on: https://chromium-review.googlesource.com/807384
Commit-Queue: Michael Spang <spang@chromium.org>
Reviewed-by: Andrey Kosyakov <caseq@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#521939}
Former-commit-id: 90ecf2f439bb7d6dc3559232e0c818b3a3bfe723